--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@heroicons/react": "^2.0.16",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
@@ -21,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
+    "react-toastify": "^9.1.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
